# TRAIDR

./: .gitignore  .graphifyignore  AGENTS.md  BUILD_PHASES.md  FILE_CHECKLIST.md  IMPLEMENTATION_PLAN.md  MVP_CUTLINE.md  README.md  SAFETY_RULES.md  SPEC.md  TASK_GRAPH.md  TEST_PLAN.md  pyproject.toml  requirements.txt
agents/: agent_bus.py  cio_agent.py  intents.py  liquidity_agent.py  llm_gateway.py  macro_agent.py  narrative_agent.py  news_agent.py  onchain_agent.py  opportunity_ranker.py  orchestrator.py  portfolio_risk_agent.py  research_agent.py  technical_agent.py  token_safety_agent.py
alerts/: __init__.py  alert_templates.py  rule_engine.py  rules.py
ask/: __init__.py  intents.py  local_answerer.py  query_parser.py
cli/: __init__.py  commands.py  formatters.py  main.py
config/: data_sources.yaml  exchanges.yaml  logging.yaml  mcp_config.json  risk.yaml  scoring_weights.yaml  settings.yaml  wallet_filters.yaml
dashboard/: __init__.py  actions.py  app.py  bitunix_cockpit.py  components.py  queries.py  view_models.py
data_pipeline/: bitunix_futures_adapter.py  bitunix_models.py  coingecko_adapter.py  contracts.py  defillama_adapter.py  dexscreener_adapter.py  discovery_models.py  live_market_loader.py  market_scan.py  normalization.py  scan_models.py  source_registry.py  token_discovery.py  validation.py
docs/: DEXSCREENER_SCAN_REPORT.md  FINAL_PHASE_40_VERIFICATION.md  FINAL_READINESS_AUDIT.md  OPERATOR_GUIDE.md  OPERATOR_RUN_REPORT.md  SCAN_RUN_REPORT.md  STABILIZATION_REPORT.md  alert_rules.md  architecture.md  ask_traidr.md  bitunix_cockpit.md  cli.md  daily_briefing.md  daily_run.md  dashboard.md  decisions.md  final_mvp_audit.md  graphify.md  lifecycle.md  market_intelligence.md  market_scan.md  news_macro_sources.md  notifications.md  portfolio.md  safety.md  scheduler.md  scoring_model.md  sell_risk.md  sentiment_lite.md  smart_wallet_lite.md  thesis.md  token_detail.md  token_discovery.md  (+1 more)
(+205 files in other folders)
